quitar imagen cubo

--- a/Claro Telfonia/Cube3caras.html
+++ b/Claro Telfonia/Cube3caras.html
@@ -626,6 +626,57 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
+/*#/#*//*#i4.i20.shape.css:shape/base/css*/
+#i20 { background-color: #fafafa; opacity: 1;
+}
+/*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
+#i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i4.i14.text.css:text/base/css*/
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 286px; height: 48px;
+        -ms-transform: translate(-50%, -50%) translate(-1px, 84px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-1px, 84px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-1px, 84px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-1px, 84px) rotate(0deg);
+}
+/*#/#*//*#i4.i130.image.css:image/base/css*/
+#i130 { opacity: 1; }
+/*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
+#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 170px;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i4.i91.shape.css:shape/base/css*/
+#i91 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i91 { cursor: pointer; }
+/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
+#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 99.6%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i4.i227.image.css:image/base/css*/
+#i227 { opacity: 1; }
+/*#/#*//*#i227.i228.positioning.css:positioning/base/css.2*/
+#i227 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 60px; height: 23px;
+        -ms-transform: translate(0, 0) translate(234px, 223px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(234px, 223px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(234px, 223px) rotate(0deg);
+        transform: translate(0, 0) translate(234px, 223px) rotate(0deg);
+}
+/*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i4 { cursor: pointer; }
 /*#/#*//*#i5.i30.shape.css:shape/base/css*/
 #i30 { background-color: #fafafa; opacity: 1;
 }
@@ -743,7 +794,21 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.cube.html:cube/html.1-->
 <div style="overflow: visible" id="i2" class="shape-holder">
     <div style="visibility: hidden" id="content-container">
-        <!--#i2.i5.cube-panel.html:cube-panel/html-->
+        <!--#i2.i4.cube-panel.html:cube-panel/html-->
+<div id="i4" class="panel-content-holder">
+    <!--#i4.i20.shape.html:shape/html-->
+<div id="i20"></div>
+<!--#/#--><!--#i4.i14.text.html:text/html-->
+<div id="i14">¡Cámbiate a claro y disfruta de todos sus beneficios manteniendo tu numero telefónico anterior!</div>
+<!--#/#--><!--#i4.i130.image.html:image/html-->
+<img id="i130" src="https://i.imgur.com/AdoTdE0.jpg"/>
+<!--#/#--><!--#i4.i91.shape.html:shape/html-->
+<div id="i91"></div>
+<!--#/#--><!--#i4.i227.image.html:image/html-->
+<img id="i227" src="https://i.imgur.com/dsWA2pv.png"/>
+<!--#/#-->
+</div>
+<!--#/#--><!--#i2.i5.cube-panel.html:cube-panel/html-->
 <div id="i5" class="panel-content-holder">
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
@@ -809,6 +874,22 @@ document.getElementById('i2').addEventListener('showPrevious', function(e){
 document.getElementById('i2').addEventListener('showNext', function(e){
     cube_i2.rotate(cube_i2.ROTATE_NEXT)
 });
+/*#/#*//*#i4.i130.image.js:image/base/js*/
+
+/*#/#*//*#i91.i177.actions.js:actions/base/js*/
+/* Name: On Click; */
+document.getElementById('i91').addEventListener('click', function(e){
+    /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.claro.com.pe/personas/portabilidad/'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+/*#/#*//*#i4.i227.image.js:image/base/js*/
+
+/*#/#*//*#i227.i228.positioning.js:positioning/base/js.2*/
+bmShow('i227');
+/*#/#*//*#i4.i50.actions.js:actions/base/js*/
+/* Name: On Click; */
+
 /*#/#*//*#i5.i192.image.js:image/base/js*/
 
 /*#/#*//*#i5.i229.image.js:image/base/js*/
@@ -825,15 +906,13 @@ document.getElementById('i216').addEventListener('click', function(e){
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
-/*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-  
 /*#/#*//*#i6.i210.image.js:image/base/js*/
 
 /*#/#*//*#i220.i221.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i220').addEventListener('click', function(e){
     /*#i221.i222.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'http://www.claro.com.pe/personas/portabilidad/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.claro.com.pe/personas/portabilidad/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i231.image.js:image/base/js*/
@@ -843,8 +922,6 @@ bmShow('i231');
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
 
-/*#/#*//*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-   
 /*#/#*//*#i226.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -870,6 +947,30 @@ family: Source Sans Pro;
 /*#/#*//*#i2.cube.meta:cube/meta.1*/
 name: Cube;
 customName: 1;
+/*#/#*//*#i2.i4.cube-panel.meta:cube-panel/meta*/
+    name: Cube Panel 1;
+/*#/#*//*#i4.i20.shape.meta:shape/meta*/
+name: Background;
+/*#/#*//*#i20.i21.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i4.i14.text.meta:text/meta*/
+name: Texto; customName: 1;
+/*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i4.i130.image.meta:image/meta*/
+name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i91.shape.meta:shape/meta*/
+name: Link;
+/*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i4.i227.image.meta:image/meta*/
+name: dsWA2pv.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i227.i228.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i5.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 2;
 /*#/#*//*#i5.i30.shape.meta:shape/meta*/
