--- a/WeedingFiestaAmericana/Venetian.html
+++ b/WeedingFiestaAmericana/Venetian.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <head>
-    <meta charset="UTF-8">   
 <title>HTML5 STUDIO BUILDER: Venetian v 1.5</title>
 
 <!-- Adform API Script -->
@@ -2203,22 +2202,22 @@ url('fonts/') format('svg');
 }
 /*#/#*/
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Brandon_reg (1)"; font-size: 26px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Brandon_reg (1)"; font-size: 27px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 257px; height: 123px;
-        -ms-transform: translate(0, 0) translate(21px, 418px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(21px, 418px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(21px, 418px) rotate(0deg);
-        transform: translate(0, 0) translate(21px, 418px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(21px, 409px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(21px, 409px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(21px, 409px) rotate(0deg);
+        transform: translate(0, 0) translate(21px, 409px) rotate(0deg);
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 95px; height: 55px;
-        -ms-transform: translate(0, 0) translate(190px, 538px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(190px, 538px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(190px, 538px) rotate(0deg);
-        transform: translate(0, 0) translate(190px, 538px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 116px; height: 116px;
+        -ms-transform: translate(0, 0) translate(175px, 503px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(175px, 503px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(175px, 503px) rotate(0deg);
+        transform: translate(0, 0) translate(175px, 503px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2239,11 +2238,11 @@ url('fonts/') format('svg');
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i26.button.css:button/base/css*/
-#i26 { position: absolute; cursor: pointer; opacity: 1.00; background-color: rgba(0,0,0,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 0%; letter-spacing: 5px; text-shadow: 0px 0px 0px rgba(0,0,0,0); border-radius: 1px; border-color: rgba(79,76,76,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i26 { position: absolute; cursor: pointer; opacity: 1.00; background-color: rgba(0,0,0,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 0%; letter-spacing: 5px; text-shadow: 0px 0px 0px rgba(0,0,0,0); border-radius: 1px; border-color: rgba(115,112,112,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i26:hover { opacity: 1; background-color: rgba(0,90,140,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(46,46,46,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i26:active { opacity: 1; background-color: rgba(0,80,130,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(54,54,54,1); border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i26.i27.positioning.css:positioning/base/css.2*/
-#i26 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 299px; height: 599px;
+#i26 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 299px; height: 600px;
         -ms-transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
@@ -2259,7 +2258,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">Convierte el mayor de tus sueños en una experiencia única para todos los que amas.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/2h5U4ls.png"/>
+<img id="i16" src="https://i.imgur.com/m1oJcId.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2268,6 +2267,8 @@ url('fonts/') format('svg');
 <dataimg id="i5" src="https://i.imgur.com/8EUS1YQ.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/eicWwCx.jpg"></dataimg>
+<!--#/#--><!--#i2.i36.slice-image.html:slice-image/html-->
+<dataimg id="i36" src="https://i.imgur.com/VQTBCEs.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i26.button.html:button/html-->
@@ -2326,6 +2327,8 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
+/*#/#*//*#i2.i36.slice-image.js:slice-image/base/js*/
+
 /*#/#*//*#i26.i27.positioning.js:positioning/base/js.2*/
 bmShow('i26');
 /*#/#*//*#i26.i34.actions.js:actions/base/js.1*/
@@ -2365,7 +2368,7 @@ name: Convierte el mayor de tus sueños en una experiencia única para todos los
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
-name: CZCjb83.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: m1oJcId.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -2378,6 +2381,8 @@ name: EBAw2ua.jpg; fileId: ; sourceTypeId: externalUrl;
 name: 8EUS1YQ.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
 name: eicWwCx.jpg; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i36.slice-image.meta:slice-image/meta*/
+name: VQTBCEs.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i26.button.meta:button/meta*/
