--- a/WeedingFiestaAmericana/Venetian.html
+++ b/WeedingFiestaAmericana/Venetian.html
@@ -2213,11 +2213,11 @@ url('fonts/') format('svg');
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 116px; height: 116px;
-        -ms-transform: translate(0, 0) translate(175px, 503px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(175px, 503px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(175px, 503px) rotate(0deg);
-        transform: translate(0, 0) translate(175px, 503px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 122px; height: 122px;
+        -ms-transform: translate(0, 0) translate(171px, 497px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(171px, 497px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(171px, 497px) rotate(0deg);
+        transform: translate(0, 0) translate(171px, 497px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2258,7 +2258,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">Convierte el mayor de tus sueños en una experiencia única para todos los que amas.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/m1oJcId.png"/>
+<img id="i16" src="https://i.imgur.com/vagfFaN.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2368,7 +2368,7 @@ name: Convierte el mayor de tus sueños en una experiencia única para todos los
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
-name: m1oJcId.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: vagfFaN.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
