--- a/Promoda/Venetian.html
+++ b/Promoda/Venetian.html
@@ -2279,7 +2279,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">¿Están ahí mis vidas?</div>
+<div id="i7"></div>
 <!--#/#--><!--#i44.image.html:image/html-->
 <img id="i44" src="https://i.imgur.com/hTOLWIB.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
