--- a/Fisher/InversionFade300x250.html
+++ b/Fisher/InversionFade300x250.html
@@ -311,7 +311,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:24px;">Descubra nuevas alterativas de inversión.</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:24px;">Descubra nuevas alternativas de inversión.</span></div>
             
             
         </a>
