--- a/Fisher/InversionFade300x600.html
+++ b/Fisher/InversionFade300x600.html
@@ -363,7 +363,7 @@
         </div>
         <div class="value_text"> 
             <span class="value_text_title value_text_bold">
-             Descubra nuevas alterativas de inversión.
+             Descubra nuevas alternativas de inversión.
             </span>
             <br/>  
             
