--- a/Fisher/InversionFade320x480.html
+++ b/Fisher/InversionFade320x480.html
@@ -363,7 +363,7 @@
         </div>
         <div class="bluefade_text"> 
             <span class="bluefade_text_title bluefade_text_bold">
-              Descubra nuevas alterativas de inversión.
+              Descubra nuevas alternativas de inversión.
             </span>
             <br/>  
           
