--- a/Fisher/BancoFade320x480.html
+++ b/Fisher/BancoFade320x480.html
@@ -363,7 +363,7 @@
         </div>
         <div class="bluefade_text"> 
             <span class="bluefade_text_title bluefade_text_bold">
-               Ideas para generar rentas
+               ¿Invierte sólo con su banco?
             </span>
             <br/>  
           
