--- a/Mercedes-Benz/fade.html
+++ b/Mercedes-Benz/fade.html
@@ -328,17 +328,17 @@
 
 <body class="value">
    
-    <div class="value_wrapper carousel-wrapper size_320x480">
+    <div class="value_wrapper carousel-wrapper size_320x480" onclick="openUrl();">
 
          <a href="https://form.divemotor.com/testdrive/8483726342/?gclid=CjwKCAiAiarfBRASEiwAw1tYvw5FatADjyAHHyo_JgzzptodCdUZA285MqcO3EtT1K6Ejs-EokgfNRoCtc0QAvD_BwE" target="_blank">
 
-        <div class="value_cover bg cover-1 carousel-item item-1" id="cta" onclick="openUrl();">
+        <div class="value_cover bg cover-1 carousel-item item-1" id="cta">
             <div class="value_logo"><span class="value_text_bold value_text_small">LLÉVAME A LA CONCESIONARIA</span></div>
         </div>
-        <div class="value_cover bg cover-2 carousel-item item-2" id="cta" onclick="openUrl();">
+        <div class="value_cover bg cover-2 carousel-item item-2" id="cta">
             <div class="value_logo"><span class="value_text_bold value_text_small">LLÉVAME A LA CONCESIONARIA</span></div>
         </div>
-        <div class="value_cover bg cover-3 carousel-item item-3" id="cta" onclick="openUrl();">
+        <div class="value_cover bg cover-3 carousel-item item-3" id="cta">
             <div class="value_logo"><span class="value_text_bold value_text_small">LLÉVAME A LA CONCESIONARIA</span></div>
         </div>
         
