--- a/Promoda/Venetian.html
+++ b/Promoda/Venetian.html
@@ -2190,31 +2190,22 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 38px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: BrownStd-Regular; font-size: 26px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 85px;
-        -ms-transform: translate(0, 0) translate(9px, 425px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(9px, 425px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(9px, 425px) rotate(0deg);
-        transform: translate(0, 0) translate(9px, 425px) rotate(0deg);
-}
-/*#/#*//*#i44.image.css:image/base/css*/
-#i44 { opacity: 1; }
-/*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
-#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 250px; height: 98px;
-        -ms-transform: translate(0, 0) translate(25px, 407px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(25px, 407px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(25px, 407px) rotate(0deg);
-        transform: translate(0, 0) translate(25px, 407px) rotate(0deg);
+#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 62px;
+        -ms-transform: translate(0, 0) translate(9px, 495px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(9px, 495px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(9px, 495px) rotate(0deg);
+        transform: translate(0, 0) translate(9px, 495px) rotate(0deg);
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 78px; height: 78px;
-        -ms-transform: translate(0, 0) translate(214px, 516px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(214px, 516px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(214px, 516px) rotate(0deg);
-        transform: translate(0, 0) translate(214px, 516px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 63px; height: 68px;
+        -ms-transform: translate(0, 0) translate(229px, 526px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(229px, 526px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(229px, 526px) rotate(0deg);
+        transform: translate(0, 0) translate(229px, 526px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2228,7 +2219,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
-#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 382px;
+#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 480px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -2249,29 +2240,41 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i32 { opacity: 1; }
 /*#/#*//*#i32.i33.positioning.css:positioning/base/css.2*/
 #i32 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
-        -ms-transform: translate(0, 0) translate(9px, 572px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(9px, 572px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(9px, 572px) rotate(0deg);
-        transform: translate(0, 0) translate(9px, 572px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(9px, 566px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(9px, 566px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(9px, 566px) rotate(0deg);
+        transform: translate(0, 0) translate(9px, 566px) rotate(0deg);
 }
 /*#/#*//*#i34.image.css:image/base/css*/
 #i34 { opacity: 1; }
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.2*/
 #i34 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
-        -ms-transform: translate(0, 0) translate(39px, 572px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(39px, 572px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(39px, 572px) rotate(0deg);
-        transform: translate(0, 0) translate(39px, 572px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(39px, 567px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(39px, 567px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(39px, 567px) rotate(0deg);
+        transform: translate(0, 0) translate(39px, 567px) rotate(0deg);
 }
 /*#/#*//*#i36.image.css:image/base/css*/
 #i36 { opacity: 1; }
 /*#/#*//*#i36.i37.positioning.css:positioning/base/css.2*/
 #i36 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
-        -ms-transform: translate(0, 0) translate(69px, 572px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(69px, 572px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(69px, 572px) rotate(0deg);
-        transform: translate(0, 0) translate(69px, 572px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(69px, 567px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(69px, 567px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(69px, 567px) rotate(0deg);
+        transform: translate(0, 0) translate(69px, 567px) rotate(0deg);
 }
+/*#/#*//*#i44.font-local.css:font/font-local/css*/
+/*#i44.i45.font-local.css:font-local/css.1*/
+@font-face {
+font-family: 'BrownStd-Regular';
+src: url('fonts/');
+src: url('fonts/?#iefix') format('embedded-opentype'),
+url('fonts/BrownStd-Regular.woff') format('woff'),
+url('fonts/') format('truetype'),
+url('fonts/') format('opentype'),
+url('fonts/') format('svg');
+}
+/*#/#*/
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2279,19 +2282,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7"></div>
-<!--#/#--><!--#i44.image.html:image/html-->
-<img id="i44" src="https://i.imgur.com/hTOLWIB.png"/>
+<div id="i7">Conoce la nueva coleccion</div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/lmIHgDF.png"/>
+<img id="i16" src="https://i.imgur.com/sjIyRDN.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/O8EIQvY.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/JKJkwYd.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/x4E3BFf.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/khfnvt3.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/yTBHbtG.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/deKTRzY.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i26.button.html:button/html-->
@@ -2302,16 +2303,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i34" src="https://i.imgur.com/a73sb0Z.png"/>
 <!--#/#--><!--#i36.image.html:image/html-->
 <img id="i36" src="https://i.imgur.com/yXZke2n.png"/>
+<!--#/#--><!--#i44.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
 bmShow('i30');
 /*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
 bmShow('i7');
-/*#/#*//*#i44.image.js:image/base/js*/
-
-/*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
-bmShow('i44');
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2331,7 +2329,7 @@ document.addEventListener('DOMContentLoaded', function() {
         autoRotationEnabled: 'true',
         autoRotationDelay: '3',
         autoRotationTimeout: '25',
-        shadow: '#006496',
+        shadow: 'rgba(247,173,173,1)',
         perspective: '500',
         useSinglePerspective: 'false',
         useOffsetCompensation: 'true',
@@ -2444,16 +2442,11 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: ¿Están ahí mis vidas?; customName: false;
+name: Conoce la nueva coleccion; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i44.image.meta:image/meta*/
-name: hTOLWIB.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
-name: lmIHgDF.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: sjIyRDN.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -2461,11 +2454,11 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: O8EIQvY.png; fileId: ; sourceTypeId: externalUrl;
+name: JKJkwYd.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: x4E3BFf.png; fileId: ; sourceTypeId: externalUrl;
+name: khfnvt3.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: yTBHbtG.png; fileId: ; sourceTypeId: externalUrl;
+name: deKTRzY.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i26.button.meta:button/meta*/
@@ -2488,4 +2481,6 @@ name: yXZke2n.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i36.i37.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i44.font.meta:font/meta*/
+name: Web Font: BrownStd-Regular; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
