--- a/Promoda/Fade.html
+++ b/Promoda/Fade.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Consumer_Fade</title>
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,500" rel=stylesheet>
+
     <style>
+
+     @font-face {
+  font-family: "BrownStd-Regular";
+  src: url("BrownStd-Regular.woff");
+}
         .corona p {
             margin: 0px
         }
@@ -33,7 +38,7 @@
             position: relative;
             overflow: hidden;
             color: #000;
-            font-family: Poppins, sans-serif
+            font-family: "BrownStd-Regular"
         }
 
         .corona .bzm_wrapper.size_300x250 {
@@ -67,15 +72,15 @@
         }
 
         .corona .bg.cover-1 {
-            background-image: url(https://i.imgur.com/uz58dqK.png)
+            background-image: url(https://i.imgur.com/Ie5mKVO.jpg)
         }
 
         .corona .bg.cover-2 {
-            background-image: url(https://i.imgur.com/CJM6o4b.png)
+            background-image: url(https://i.imgur.com/mTKtgOH.jpg)
         }
 
         .corona .bg.cover-3 {
-            background-image: url(https://i.imgur.com/L9MpMa1.png)
+            background-image: url(https://i.imgur.com/yFjn8ww.jpg)
         }
 
         .corona .bzm_cover.bzm_pos_tl {
@@ -108,7 +113,7 @@
             line-height: 1.1;
             color: #000;
             text-align: center;
-            margin-top: 10px;
+            margin-top: 12px;
             width: 99%;
             
         }
@@ -274,9 +279,9 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:24px;text-align:center;"> ¿Están ahí mis vidas?</span></div>
-            <div style="bottom:0px;height:40px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/lmIHgDF.png" style="height:35px;margin-top:3px;">
-              <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px; margin-top: -35px;">
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:23px;text-align:center;"> Conoce la nueva colección</span></div>
+            <div style="bottom:0px;height:40px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/sjIyRDN.png" style="height:55px;margin-top:-2px;">
+              <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px; margin-top: -30px;">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://mejorvenapromoda.com/"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/VGU7zxd.png" title="compartir en facebook" width="22" /></a>
