--- a/Promoda/Venetian.html
+++ b/Promoda/Venetian.html
@@ -2292,7 +2292,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/khfnvt3.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/deKTRzY.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/2jwAaur.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i26.button.html:button/html-->
@@ -2458,7 +2458,7 @@ name: JKJkwYd.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: khfnvt3.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: deKTRzY.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 2jwAaur.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i26.button.meta:button/meta*/
