--- a/Promoda/Fade.html
+++ b/Promoda/Fade.html
@@ -119,9 +119,9 @@
         }
 
         .corona .bzm_text_title {
-            font-size: 18px;
+           
             color: #000;
-            width:95%;
+            width:97%;
         }
 
         .corona .bzm_text_light {
@@ -279,9 +279,11 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:23px;text-align:center;"> Conoce la nueva colección</span></div>
-            <div style="bottom:0px;height:40px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/sjIyRDN.png" style="height:55px;margin-top:-2px;">
-              <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px; margin-top: -30px;">
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:25px;text-align:center;"> Conoce la nueva colección</span></div>
+
+            <div style="bottom:0px;height:40px;text-align:right ; margin-right: 5px;"> <img src="https://i.imgur.com/sjIyRDN.png" style="height:55px;margin-top:-28px;">
+
+              <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px; margin-top: -35px;">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://mejorvenapromoda.com/"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/VGU7zxd.png" title="compartir en facebook" width="22" /></a>
