--- a/WeedingFiestaAmericana/Venetian.html
+++ b/WeedingFiestaAmericana/Venetian.html
@@ -2202,7 +2202,7 @@ url('fonts/') format('svg');
 }
 /*#/#*/
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Brandon_reg (1)"; font-size: 27px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Brandon_reg (1)"; font-size: 23px; color: #806a6a; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 257px; height: 123px;
         -ms-transform: translate(0, 0) translate(21px, 409px) rotate(0deg);
@@ -2256,7 +2256,7 @@ url('fonts/') format('svg');
 <div id="i30"></div>
 <!--#/#--><!--#i32.font.html:font/html-->
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Convierte el mayor de tus sueños en una experiencia única para todos los que amas.</div>
+<div id="i7">CONVIERTE EL MAYOR DE TUS SUEÑOS EN UNA EXPERIENCIA ÚNICA PARA TODOS LOS QUE AMAS.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/vagfFaN.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
@@ -2364,7 +2364,7 @@ data: /*!*/{}/*!*/;
 /*#/#*//*#i32.font.meta:font/meta*/
 name: Web Font: Brandon_reg (1); type: font-local; customName: ;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: Convierte el mayor de tus sueños en una experiencia única para todos los que amas.; customName: false;
+name: CONVIERTE EL MAYOR DE TUS SUEÑOS EN UNA EXPERIENCIA ÚNICA PARA TODOS LOS QUE AMAS.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
