--- a/Kaiser/Venetian.html
+++ b/Kaiser/Venetian.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
 <title>HTML5 STUDIO BUILDER: Venetian v 1.5</title>
 
 <!-- Adform API Script -->
