--- a/Kaiser/Fade.html
+++ b/Kaiser/Fade.html
@@ -279,7 +279,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:16px;text-align:center;"> Hacemos envíos a todo Perú. ¡Haz tu pedido y llévate el 10% de descuento!</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:16px;text-align:center;"> Hacemos envíos a todo Perú. ¡Haz tu pedido y llévate un 10% de descuento!</span></div>
 
             <div style="bottom:0px;height:40px;text-align:right ; margin-right: 0px;"> <img src="https://i.imgur.com/SbN9vBB.png" style="height:25px;margin-top:5px;">
 
