--- a/WeedingFiestaAmericana/Venetian.html
+++ b/WeedingFiestaAmericana/Venetian.html
@@ -2189,26 +2189,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i32.font-local.css:font/font-local/css*/
-/*#i32.i33.font-local.css:font-local/css.1*/
-@font-face {
-font-family: 'Brandon_reg (1)';
-src: url('fonts/');
-src: url('fonts/?#iefix') format('embedded-opentype'),
-url('fonts/') format('woff'),
-url('fonts/') format('truetype'),
-url('fonts/Brandon_reg (1).otf') format('opentype'),
-url('fonts/') format('svg');
-}
-/*#/#*/
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Brandon_reg (1)"; font-size: 21px; color: #806a6a; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "DIN Light Regular"; font-size: 21px; color: #806a6a; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 257px; height: 123px;
-        -ms-transform: translate(0, 0) translate(24px, 408px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(24px, 408px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(24px, 408px) rotate(0deg);
-        transform: translate(0, 0) translate(24px, 408px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(24px, 417px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(24px, 417px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(24px, 417px) rotate(0deg);
+        transform: translate(0, 0) translate(24px, 417px) rotate(0deg);
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
@@ -2248,17 +2236,27 @@ url('fonts/') format('svg');
         -moz-transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
 }
+/*#/#*//*#i37.font-local.css:font/font-local/css*/
+/*#i37.i38.font-local.css:font-local/css.1*/
+@font-face {
+font-family: 'DIN Light Regular';
+src: url('fonts/');
+src: url('fonts/?#iefix') format('embedded-opentype'),
+url('fonts/') format('woff'),
+url('fonts/') format('truetype'),
+url('fonts/DIN Light Regular.otf') format('opentype'),
+url('fonts/') format('svg');
+}
+/*#/#*/
 /*#/#*/
 </style>
 <!--#/#--></head>
 <body>
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i32.font.html:font/html-->
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">CONVIERTE EL MAYOR 
-DE TUS SUEÑOS EN UNA EXPERIENCIA ÚNICA PARA TODOS LOS 
-QUE AMAS.</div>
+DE TUS SUEÑOS EN UNA EXPERIENCIA ÚNICA PARA TODOS LOS QUE AMAS.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/vagfFaN.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
@@ -2275,6 +2273,7 @@ QUE AMAS.</div>
 </div>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
+<!--#/#--><!--#i37.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2363,12 +2362,9 @@ function bmHide(id) {
 name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i32.font.meta:font/meta*/
-name: Web Font: Brandon_reg (1); type: font-local; customName: ;
 /*#/#*//*#i7.text.meta:text/meta*/
 name: CONVIERTE EL MAYOR 
-DE TUS SUEÑOS EN UNA EXPERIENCIA ÚNICA PARA TODOS LOS 
-QUE AMAS.; customName: false;
+DE TUS SUEÑOS EN UNA EXPERIENCIA ÚNICA PARA TODOS LOS QUE AMAS.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
@@ -2394,4 +2390,6 @@ name: ;
 customName: false;
 /*#/#*//*#i26.i27.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i37.font.meta:font/meta*/
+name: Web Font: DIN Light Regular; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
