--- a/WeedingFiestaAmericana/Venetian.html
+++ b/WeedingFiestaAmericana/Venetian.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title>HTML5 STUDIO BUILDER: Venetian v 1.5</title>
-<meta charset="UTF-8">
+
 <!-- Adform API Script -->
 <script type="text/javascript">
 document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banners/scripts/rmb/Adform.DHTML.js?bv='+ Math.random()) +'"><\/script>');
@@ -2190,7 +2190,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "DIN Light Regular"; font-size: 21px; color: #806a6a; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "DIN Light Regular"; font-size: 21px; color: #858585; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 257px; height: 123px;
         -ms-transform: translate(0, 0) translate(24px, 417px) rotate(0deg);
